apply 100vw to html element in style.css to prevent horizontal scrollbar

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,6 +18,7 @@
 
 html {
   scroll-behavior: smooth;
+  width: 100vw;
 }
 
 body {
